--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
     "url": "https://github.com/jhiesey/peercloud/issues"
   },
   "dependencies": {
-    "compression": "^1.0.9",
-    "debug": "^2.0.0",
-    "express": "^4.8.5",
-    "jade": "^1.5.0",
-    "mime": "^1.3.4",
-    "simple-peer": "^5.3.0",
-    "thunky": "^0.1.0",
-    "twilio": "^2.1.0",
+    "compression": "^1.7.4",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
+    "mime": "^2.4.4",
+    "pug": "^2.0.4",
+    "simple-peer": "^9.6.2",
+    "thunky": "^1.1.0",
+    "to-arraybuffer": "^1.0.1",
+    "twilio": "^3.39.3",
     "webtorrent": "0.x",
-    "xhr": "^2.0.0"
+    "xhr": "^2.5.0"
   },
   "devDependencies": {
-    "browserify": "^10.0.0",
-    "nib": "^1.0.3",
-    "nodemon": "^1.2.1",
-    "standard": "^3.1.1",
-    "stylus": "^0.51.0",
-    "watchify": "^3.1.0"
+    "browserify": "^16.5.0",
+    "nib": "^1.1.2",
+    "nodemon": "^2.0.2",
+    "standard": "^14.3.1",
+    "stylus": "^0.54.7",
+    "watchify": "^3.11.0"
   },
   "homepage": "https://peercloud.io",
   "keywords": [
@@ -51,7 +52,7 @@
     "secret-upload": "rsync -a -O -v --delete secret/ hiesey.com:/home/jhiesey/www/peercloud.io/secret/",
     "start": "node server",
     "test": "standard",
-    "watch": "npm run watch-css & npm run watch-js & DEBUG=peercloud* nodemon server -e js,jade -d 1",
+    "watch": "npm run watch-css & npm run watch-js & DEBUG=peercloud* nodemon server -e js,pug -d 1",
     "watch-css": "stylus -u nib css/main.styl -o static/ -w",
     "watch-js": "watchify client -o static/bundle.js -dv"
   }
